# grpc-java

./: .travis.yml  repositories.bzl
alts/src/test/java/io/grpc/alts/internal/: AltsHandshakerStubTest.java
core/: build.gradle
core/src/main/java/io/grpc/inprocess/: InProcessTransport.java
core/src/test/java/io/grpc/inprocess/: InProcessServerTest.java  InProcessTransportTest.java
services/: BUILD.bazel
